<resources>
    <string name="app_name">Local Trader</string>
    <string name="base_api_url">https://192.168.1.147:14443</string>
    <string name="request_failure">Request failed</string>
    <string name="network_error">Network error</string>
    <string name="my_items">my items</string>
    <string name="log_in">log in</string>
    <string name="back">back</string>
    <string name="register">register</string>
    <string name="log_out">log out</string>
    <string name="username_example">ex. sellerman01</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="minimum_num_characters">minimum 8 characters</string>
    <string name="user_logged_out">User logged out</string>
    <string name="pw_too_short_warn">Password must be at least 8 characters</string>
    <string name="missing_username">Missing a username</string>
    <string name="pi_title">Item title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="seller">Seller</string>
    <string name="contact_info">Contact info</string>
    <string name="post_item">Post item</string>
    <string name="logged_out">Logged out</string>
    <string name="bad_login_creds">Invalid login credentials</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="pw_mismatch">Passwords do not match</string>
    <string name="username_taken">Username already taken</string>
    <string name="registration_success">Registration successful</string>
    <string name="post">Post</string>
    <string name="listing_posted">Listing posted</string>
    <string name="expired_credentials">Your credentials may have expired. Log in again.</string>
    <string name="title_is_required">Title is required</string>
    <string name="contact_info_is_required">Contact info is required</string>
    <string name="edit">edit</string>
    <string name="new_user_name">New user name</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="leave_empty">Leave empty for no change</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="changes_succeeded">Changes succeeded</string>
    <string name="current_pw_is_required">Current password is required</string>
    <string name="delete_listing">Delete listing</string>
    <string name="delete_account">Delete account</string>
    <string name="account_deleted">Account deleted</string>
    <string name="warning">Warning!</string>
    <string name="account_delete_warn">Deleting your account is irreversible. All your listing will be deleted as well.</string>
    <string name="delete_listing_warn">Are you sure you want to delete this listing?\nYou will have to post it again if you change your mind.</string>
    <string name="listing_deleted">Listing deleted</string>
    <string name="settings">Settings</string>
    <string name="txt_base_api">Base API URL</string>
    <string name="settings_saved">Settings saved</string>
</resources>