<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/user_name"
        app:layout_constraintBottom_toTopOf="@+id/login_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"/>

    <EditText
        android:id="@id/login_username"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:background="#43010101"
        android:hint="@string/username_example"
        android:inputType="text"
        android:maxLength="64"
        android:maxLines="1"
        android:autofillHints="username"
        android:imeOptions="flagForceAscii"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:paddingTop="15dp"
        android:text="@string/password"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="#43010101"
        android:hint="@string/minimum_num_characters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        android:autofillHints="password"
        android:maxLines="1" />

    <TextView
        android:id="@+id/login_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        android:textColor="#ff0000"/>

    <Button
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:textColor="#000000"
        android:backgroundTint="#65FFFFFF"
        app:layout_constraintStart_toStartOf="@id/login_password"
        app:layout_constraintTop_toBottomOf="@id/login_warning" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_warning" />

</androidx.constraintlayout.widget.ConstraintLayout>