<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ep_tv_current_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:text="@string/new_user_name"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/ep_et_new_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@id/ep_et_new_username"
            android:layout_width="250dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            android:background="#43010101"
            android:hint="@string/leave_empty"
            android:inputType="text"
            android:maxLength="64"
            android:maxLines="1"
            android:autofillHints="username"
            android:imeOptions="flagForceAscii"/>

        <TextView
            android:id="@+id/ep_tv_current_password"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:paddingTop="15dp"
            android:text="@string/current_password"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ep_et_new_username" />

        <EditText
            android:id="@+id/ep_et_current_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:background="#43010101"
            android:hint="@string/minimum_num_characters"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ep_tv_current_password_warn" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:paddingTop="15dp"
            android:text="@string/new_password"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ep_et_current_password" />

        <EditText
            android:id="@+id/ep_et_new_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:background="#43010101"
            android:hint="@string/leave_empty"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ep_tv_new_password_warn" />

        <TextView
            android:id="@+id/ep_tv_confirm_new_password"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingTop="15dp"
            android:text="@string/confirm_new_password"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ep_et_new_password" />

        <EditText
            android:id="@+id/ep_et_confirm_new_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:background="#43010101"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ep_tv_pw_mismatch" />

        <TextView
            android:id="@+id/ep_tv_newUsername_warn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ep_et_new_username"
            android:textColor="#ff0000"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/ep_tv_current_password_warn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ep_tv_current_password" />

        <TextView
            android:id="@+id/ep_tv_new_password_warn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <TextView
            android:id="@+id/ep_tv_pw_mismatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pw_mismatch"
            android:textColor="#ff0000"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ep_tv_confirm_new_password" />

        <Button
            android:id="@+id/ep_btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ep_et_confirm_new_password" />

        <Button
            android:id="@+id/ep_btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ep_btn_confirm"
            android:layout_marginTop="10dp"
            android:backgroundTint="#ff0000"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>