<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostItemActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_back_dets"
            android:layout_width="88dp"
            android:layout_height="49dp"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/pi_itemTitle"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:text="@string/pi_title"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHolder" />

    <EditText
        android:id="@+id/pi_et_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#43010101"
        android:layout_marginHorizontal="10dp"
        android:inputType="text"
        android:maxLength="255"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/pi_itemTitle" />

    <TextView
        android:id="@+id/pi_price"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/price"
        android:textSize="25sp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pi_et_title" />

    <EditText
        android:id="@+id/pi_et_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:background="#43010101"
        android:inputType="text"
        android:maxLength="255"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/pi_price" />

    <TextView
        android:id="@+id/pi_descr"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/description"
        android:textSize="25sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pi_et_price" />

    <EditText
        android:id="@+id/pi_et_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:layout_marginHorizontal="10dp"
        android:background="#43010101"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/pi_descr" />

    <TextView
        android:id="@+id/pi_contactInfo"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/contact_info"
        android:textSize="25sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pi_et_descr" />

    <EditText
        android:id="@+id/pi_et_contactInfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:background="#43010101"
        android:inputType="text"
        android:maxLength="255"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pi_contactInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>